test/tests/stages/18_structures/valid/params_and_returns/return_big_struct_on_page_boundary.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: eighteen_bytes
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: arr
            Array: 
              TLong: 18
              Char: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: on_page_boundary
        None: 
        Structure: 
          TIdentifier: eighteen_bytes
          Bool: 0
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_struct
        List[0]: 
        CB: 
          List[5]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CDot: 
                      TIdentifier: arr
                      CVar: 
                        TIdentifier: on_page_boundary
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 17
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 12
                    None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CDot: 
                      TIdentifier: arr
                      CVar: 
                        TIdentifier: on_page_boundary
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 9
                      None: 
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CDot: 
                      TIdentifier: arr
                      CVar: 
                        TIdentifier: on_page_boundary
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 8
                      None: 
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CDot: 
                      TIdentifier: arr
                      CVar: 
                        TIdentifier: on_page_boundary
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 7
                      None: 
                    None: 
                  CUnary: 
                    CNegate: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: on_page_boundary
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Structure: 
            TIdentifier: eighteen_bytes
            Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CFunctionCall: 
  